import { Formik } from 'formik';
import React from 'react';
import { render } from 'test-helpers/test-utils';
import DollarAmountField from './DollarAmountField';

describe('DollarAmountField', () => {
  it('matches the snapshot without error', () => {
    const { asFragment } = render(
      <Formik initialValues={{}} onSubmit={async () => {}}>
        {() => <DollarAmountField id="amount" label="amount" name="amount" required={true} />}
      </Formik>
    );

    expect(asFragment()).toMatchSnapshot();
  });

  it('matches the snapshot with error', () => {
    const { asFragment } = render(
      <Formik
        initialValues={{
          amount: ''
        }}
        onSubmit={async () => {}}
        initialErrors={{ amount: 'error is here' }}
        initialTouched={{ amount: true }}>
        {() => <DollarAmountField id="amount" label="amount" name="amount" required={true} />}
      </Formik>
    );

    expect(asFragment()).toMatchSnapshot();
  });
});
